[package]
name = "chemrust-nasl-app"
version = "0.1.0"
edition = "2021"
authors = ["TonyWu20"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-cell-io = "0.2.4"
castep-periodic-table = "0.5.1"
chemrust-nasl = {path = "../chemrust-nasl"}
clap = {version = "4", features = ["derive"]}
inquire = "0.7.5"
serde_yaml = "0.9.34"
serde = {version = "1.0", features = ["derive"]}
chemrust-core = "0.3.5"
nalgebra = "0.33"
