[package]
name = "chemrust-nasl"
version = "0.1.0"
edition = "2021"
authors = ["TonyWu20"]
readme = "README.md"
homepage = "https://github.com/TonyWu20/chemrust-nasl"
repository = "https://github.com/TonyWu20/chemrust-nasl"
license = "MIT"
keywords = ["chemistry", "chemistry_research", "catalysis_research", "geometry"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemrust-core = {git = "https://github.com/TonyWu20/chemrust", branch = "refactor"}
nalgebra = "0.32"
kiddo = "4.2"
castep-periodic-table = "0.4"

[dev-dependencies]
castep-cell-io = {git = "https://github.com/TonyWu20/castep-cell-io.git", branch = "dev"}
