[package]
name = "chemrust-nasl"
version = "0.1.0"
edition = "2021"
authors = ["TonyWu20"]
readme = "README.md"
homepage = "https://github.com/TonyWu20/chemrust-nasl"
repository = "https://github.com/TonyWu20/chemrust-nasl"
license = "MIT"
keywords = ["chemistry", "chemistry_research", "catalysis_research", "geometry"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemrust-core = "0.3.5"
nalgebra = "0.33"
kiddo = "4.2"
castep-periodic-table = "0.5.1"
rayon = "1.10"

[dev-dependencies]
castep-cell-io = "0.2.4"
